# arc_cpp

./: .gitignore  CMakeLists.txt
arc/: CMakeLists.txt
arc/src/: Arc.h  Color.cpp  Color.h  Configuration.h  Core.cpp  Core.h  Engine.h  Graphics.cpp  Graphics.h  Headless.h  Input.cpp  Input.h  InputEnums.h  InputProcessor.h  Logger.h  Pool.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
arc/src/assets/: AssetManager.cpp  AssetManager.h
arc/src/collections/: ArrayMap.cpp  ArrayMap.h
arc/src/gfx/: Align.h  Animation.h  Camera.cpp  Camera.h  Environement.h  GLTexture.cpp  GLTexture.h  ImmediateModeRenderer.cpp  ImmediateModeRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPart.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  NinePatch.cpp  NinePatch.h  PixFormat.h  Scaling.h  ShaderProgram.cpp  ShaderProgram.h  ShapeRenderer.cpp  ShapeRenderer.h  SpriteBatch.cpp  SpriteBatch.h  Texture2D.cpp  Texture2D.h  TextureDescriptor.h  TextureRegion.h  VertexAttributes.cpp  VertexAttributes.h  VertexBuffer.cpp  VertexBuffer.h  Viewport.cpp  Viewport.h
arc/src/gfx/animation/: AnimationController.cpp  AnimationController.h  BaseAnimationController.cpp  BaseAnimationController.h
arc/src/gfx/atlas/: AtlasRegion.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasData.cpp  TextureAtlasData.h
arc/src/gfx/data/: ModelAnimation.h  ModelData.cpp  ModelData.h  ModelMaterial.h  ModelMesh.h  ModelMeshPart.h  ModelNode.h  ModelNodeAnimation.h  ModelNodeKeyframe.h  ModelNodePart.h  ModelTexture.h
arc/src/gfx/fonts/: BitmapFont.cpp  BitmapFont.h  BitmapFontCache.cpp  BitmapFontCache.h  BitmapFontData.cpp  BitmapFontData.h  Glyph.cpp  Glyph.h  TextMarkup.cpp  TextMarkup.h
arc/src/gfx/material/: Attribute.cpp  Attribute.h  Attributes.cpp  Attributes.h
arc/src/gfx/nodes/: Node.h  NodeAnimation.h  NodePart.cpp  NodePart.h
arc/src/gfx/rendering/: BaseShader.cpp  BaseShader.h  BaseShaderProvider.h  DefaultShader.cpp  DefaultShader.h  DefaultShaderProvider.h  IShader.h  IShaderProvider.h  RenderContext.h  Renderable.h  RenderableBatch.cpp  RenderableBatch.h  TextureBinder.h
arc/src/gfx/shapes/: Cube.cpp  Cube.h
arc/src/input/: InputAdapter.cpp  InputAdapter.h  InputEnums.h  InputEventQueue.cpp  InputEventQueue.h  InputProcessor.h
arc/src/math/: Affine2.cpp  Affine2.h  Mat4.cpp  Mat4.h  Mathf.h  Quat.cpp  Quat.h  Rect.cpp  Rect.h  Transform.h  Vec2.h  Vec3.cpp  Vec3.h
arc/src/math/cglm/: affine.c  bezier.c  box.c  cam.c  curve.c  ease.c  euler.c  frustum.c  io.c  mat3.c  mat4.c  plane.c  project.c  quat.c  sphere.c  vec3.c  vec4.c
arc/src/net/: Socket.h
arc/src/net/tcp/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  Sockets.cpp
arc/src/net/tcp/utils/: Errors.cpp  Errors.hpp  Messages.hpp  Sockets.hpp  Utils.hpp
arc/src/scene2d/: Actor.cpp  Actor.h  Cell.cpp  Cell.h  Group.cpp  Group.h  IDrawable.h  ILayout.h  PrimitiveDrawable.cpp  PrimitiveDrawable.h  Skin.cpp  Skin.h  Stage.cpp  Stage.h  Table.cpp  Table.h  Touchable.hpp  Value.cpp  Value.h  WidgetGroup.cpp  WidgetGroup.h
arc/src/utils/: CameraController.cpp  CameraController.h  DirUtils.h  FileUtils.h  Format.h  HdpiUtils.h  IO.h  ScissorStack.cpp  ScissorStack.h  Span.h  StopWatch.h  StringUtils.h  ThreadPool.h  TimeUtils.h  json11.cpp  json11.hpp  object_pool.inl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
samples/: CMakeLists.txt
samples/01_hello/: CMakeLists.txt
samples/01_hello/src/: main.cpp
samples/02_input/: CMakeLists.txt
samples/02_input/src/: main.cpp
samples/03_triangle/: CMakeLists.txt
samples/03_triangle/src/: main.cpp
samples/04_textured_quad/: CMakeLists.txt
samples/04_textured_quad/src/: main.cpp
samples/05_spritebatch/: CMakeLists.txt
samples/05_spritebatch/src/: main.cpp
samples/06_cube/: CMakeLists.txt
samples/06_cube/src/: main.cpp
samples/07_model/: CMakeLists.txt
samples/07_model/src/: main.cpp
samples/08_renderbatch/src/: main.cpp
samples/09_skeletal_animation/: CMakeLists.txt
samples/09_skeletal_animation/src/: main.cpp
samples/10_bitmap_font/src/: main.cpp
samples/11_gui/src/: main.cpp
samples/11_texture_atlas/src/: main.cpp
samples/12_gui/src/: main.cpp
samples/12_shapes/src/: main.cpp
samples/13_gui/src/: main.cpp
samples/99_experiments/: CMakeLists.txt
samples/99_experiments/src/: client.h  io.h  main.cpp  packets.h
